# SlapPy

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  ONBOARDING.md  README.md  RENAME_NOTES.md  SetVersion.bat  mkdocs.yml  pyproject.toml
.cargo/: config.toml
UIConceptArt/: Concepts.jfif  Stickers.jfif  download (1).jfif  download.jfif
benchmarks/: baseline_report.md  particle_field_baseline.py  perf_baseline_2026_07_07.py  refresh_2026_05_31.py
config/: engine.yml  fluid.yml  materials.yml  physics.yml  physics2.yml  softbody.yml
crates/pharos_bin/: Cargo.toml
crates/pharos_bin/src/: main.rs
crates/pharos_c_abi/: Cargo.toml  cbindgen.toml
crates/pharos_c_abi/src/: lib.rs
crates/pharos_core/: Cargo.toml
crates/pharos_core/src/: lib.rs  pbf_solver.rs  sdf_collision.rs  slap_format.rs  softbody_solver.rs
crates/pharos_core/src/sim/: mod.rs  propagator.rs
crates/pharos_core/tests/: sim_trait.rs
crates/pharos_py/: Cargo.toml
crates/pharos_py/src/: bvh.rs  hull.rs  ik_solver.rs  lib.rs  material_eval.rs  math.rs  math_3d.rs  raster.rs  render_bindings.rs  sdf.rs  softbody_solver.rs  struct_layout.rs
crates/pharos_render/: Cargo.toml
crates/pharos_render/shaders/: forward.wgsl  gbuffer.wgsl  pbf_step.wgsl  postprocess_contact_shadows.wgsl  postprocess_dof_bokeh.wgsl  postprocess_dof_coc.wgsl  postprocess_gtao_temporal.wgsl  postprocess_motion_blur_scatter.wgsl  postprocess_motion_blur_tilemax.wgsl  postprocess_taa_resolve.wgsl  shadow_csm.wgsl  skinning.wgsl  softbody_step.wgsl  vcr_accumulate.wgsl  vcr_common.wgsl  vcr_composite.wgsl  vcr_merge.wgsl  vcr_seed.wgsl  vcr_temporal.wgsl
crates/pharos_render/src/: features.rs  lib.rs  resource.rs  scene.rs  skinning.rs
crates/pharos_render/src/backend/: mod.rs  wgpu_backend.rs
crates/pharos_render/src/compute/: mod.rs  pbf.rs  softbody.rs
crates/pharos_render/src/legacy/: fluid_shader.rs  gi.rs  ibl.rs  mod.rs  scene_walk.rs
crates/pharos_render/src/pipeline/: forward.rs  gbuffer.rs  mod.rs
crates/pharos_render/src/postprocess/: contact_shadows.rs  dof.rs  gtao_temporal.rs  mod.rs  motion_blur.rs  taa.rs
crates/pharos_render/src/scene/: mod.rs  walker.rs
crates/pharos_render/src/shadow/: csm.rs  mod.rs
crates/pharos_render/src/vcr/: accumulate.rs  composite.rs  config.rs  merge.rs  mod.rs  seed.rs  temporal.rs
crates/pharos_render/tests/: features_probe.rs  postprocess_taa_jitter.rs  regression_intake.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXTENSIONS.md  ONBOARDING.md  RELEASE.md  aaa_theme_shaders_2026_07_19.md  api_stability_2026_07_07.md  architecture_overview.md  backcompat_contract_2026_07_07.md  big_picture_2026_07_05.md  cargo_audit_2026_06_02.md  consolidation_2026_06_07.md  core_engine_audit_2026_06_02.md  dead_code_audit_2026_06_02.md  demo_gallery.md  diary_softbody_bridge_2026_07_04.md  dynamics_design.md  dynamics_quickstart.md  engine_feature_map_2026_07_04.md  engine_surface_v030.md  examples_smoke_2026_05_31.md  examples_smoke_2026_06_01.md  examples_smoke_2026_06_01_v3.md  feature_map_2026_06_03.md  feature_map_delta_2026_07_04.md  feature_map_delta_2026_07_04_v2.md  feature_map_delta_2026_07_05.md  feature_map_delta_2026_07_06.md  feature_map_delta_2026_07_07.md  feature_map_delta_2026_07_08.md  feature_map_delta_2026_07_09.md  feature_map_delta_2026_07_10.md  feature_map_delta_2026_07_12.md  feature_map_delta_2026_07_13.md  feature_map_delta_2026_07_14.md  feature_map_delta_2026_07_15.md  feature_map_delta_2026_07_16.md  feature_map_delta_2026_07_17.md  feature_map_delta_2026_07_18.md  fluid_design.md  (+84 more)
docs_site/: contributing.md  extensions.md  http_bridge.md  index.md  quickstart.md  release.md  themes.md
examples/: README.md  bullet_holes_demo.py  buoyancy_demo.py  character_damage_demo.py  detonate_gallery_demo.py  editor_demo.py  fluid_sandbox.py  fluid_surface_demo.py  hello_3d_layer.py  hello_bake.py  hello_composite.py  hello_ik_chain.py  hello_lighting.py  hello_physics.py  hello_pixel.py  hello_ragdoll.py  hello_rope.py  hello_studio.py  hello_thermal.py  hello_world.py  hud_demo.py  humanoid_ik_terrain_demo.py  humanoid_walking_demo.py  landscape_demo.py  layered_character.py  mud_pool_demo.py  multiplayer_demo.py  sand_crater_demo.py  vehicle_obstacle_course.py  water_dam_break.py
extensions/example_mod/: pyproject.toml
extensions/example_mod/example_mod/: __init__.py
extensions/example_mod/example_mod/themes/: example_mod_theme.yaml
pharos-editor/: README.md  pyproject.toml
scripts/: build_wheel.py  capture_notebook_screenshots.py  editor_screenshot.py  errors_lint.py  gen_engine_surface_doc.py  gen_subpackage_api_docs.py  import_lint.py  perf_gate.py  refresh_api_surface_snapshot.py  set_version.py  wheel_size_audit.py
shaders/: ao_gtao.wgsl  auto_exposure.wgsl  bloom.wgsl  bloom_pyramid.wgsl  bloom_threshold.wgsl  blur.wgsl  bounds_reduction.wgsl  brdf_lut.wgsl  chromatic_aberration.wgsl  cluster_build_3d.wgsl  cluster_cull_3d.wgsl  collision_mask.wgsl  compositor_blend.wgsl  contact_shadows.wgsl  contact_shadows_depth.wgsl  decal_paint.wgsl  deform_crack.wgsl  deform_impact.wgsl  deform_material_sample.wgsl  deform_repair.wgsl  dof.wgsl  film_grain.wgsl  fluid.wgsl  fluid_noise_init.wgsl  fluid_project.wgsl  fluid_render.wgsl  fluid_sim_advect.wgsl  fullscreen_blit.wgsl  gravity_warp.wgsl  health_sum.wgsl  histogram.wgsl  ibl_prefilter.wgsl  lighting_clear_accum.wgsl  lighting_cluster.wgsl  lighting_combine.wgsl  lighting_cone.wgsl  lighting_directional.wgsl  lighting_emission.wgsl  lighting_point.wgsl  lighting_radiance_apply.wgsl  (+58 more)
src/: deferred_cluster.rs  fluid_shader.rs  lib.rs  node_compiler.rs  pbf_solver.rs  physics.rs  softbody_solver.rs  tile_cache.rs
tests/: perf_baseline.json  test_all_demos_smoke.py  test_animation.py  test_asset_tools.py  test_ast_compiler.py  test_bake_pipeline.py  test_basic.py  test_blast.py  test_blast_conservation.py  test_collision_stamp.py  test_components.py  test_composite_serialize_roundtrip.py  test_compute.py  test_config_smoke.py  test_demo_hello_audio.py  (+117 more)
(+3133 files in other folders)
