[package]
name = "slappyengine"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
lz4 = "1.25"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
rand = "0.8"
half = "2"

[features]
default = ["3d"]
3d = []
gi = ["3d"]
ibl = ["3d"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
