[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "slappy-engine"
version = "0.3.0b0"
description = "2D pixel-art game engine with optional 3D layers, Rust backends, and wgpu rendering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["game-engine", "pixel-art", "2d", "3d", "wgpu", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "wgpu>=0.18",
    "numpy>=1.24",
    "Pillow>=10.0",
    "glfw>=2.5",
    "pyyaml>=6.0",
    "lz4>=4.0",
]

[project.scripts]
slap = "slappyengine.cli:main"

[project.urls]
Homepage = "https://github.com/andrewkwatts-maker/SlapPyEngine"
Repository = "https://github.com/andrewkwatts-maker/SlapPyEngine"
Issues = "https://github.com/andrewkwatts-maker/SlapPyEngine/issues"

[project.optional-dependencies]
editor = ["dearpygui>=1.11", "pywebview>=4.0", "arithma>=2.0.2"]
video = ["av>=12.0"]
audio = ["sounddevice>=0.4", "soundfile>=0.12"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "watchdog>=3.0"]
ai = ["httpx>=0.27"]
# Symbolic + numeric formula evaluation surface for `slappyengine.math`.
# When this extra is installed `Formula` / `evaluate` / `compile_formula`
# route through arithma's Rust-backed `Expression`. Without it the math
# subpackage still imports — it falls back to a locked-down Python eval
# sandbox (stdlib ``math`` only) for formula evaluation.
math = ["arithma>=2.0.2"]
network = [
    "kademlia>=2.2.2",
    "aioice>=0.9.0",
    "zeroconf>=0.131",
]
# 3D mesh + PBR rendering support.
# wgpu is already a core dependency, so no additional Python packages are needed.
# The _core Rust crate's "3d" feature flag is activated at build time:
#   maturin build --features 3d
# Install with: pip install slappyengine[3d]
3d = []

[tool.maturin]
python-source = "python"
module-name = "slappyengine._core"
features = ["pyo3/extension-module"]
# Non-Python package data that must ship inside the wheel. Maturin auto-
# includes ``*.py`` files under ``python-source`` but skips other file
# types unless they are named here. The baked diary themes are
# copied on first launch by ``slappyengine.ui.theme.user_themes``.
include = [
    "python/slappyengine/ui/theme/themes/_baked/*.theme.yaml",
    "python/slappyengine/prefabs/baked/*.prefab.yaml",
    "python/slappyengine/prefabs/baked/previews/*.png",
    "python/slappyengine/post_process/baked_chains/*.chain.yaml",
    "python/slappyengine/ui/hotkeys/baked/*.yaml",
    "python/slappyengine/ui/editor/baked_layouts/*.layout.yaml",
]
# Strip debug symbols from the compiled _core extension to shrink wheel size.
# Combined with [profile.release] strip = true in Cargo.toml, this drops the
# wheel by ~30-50% on platforms where Cargo's strip doesn't fully apply.
strip = true
# Exclude development artifacts from the wheel.
#
# Wheel-size audit 2026-06-02: maturin's `exclude` accepts glob patterns
# relative to the project root. `**/tests` matches top-level `tests/` but
# does not consistently match the inner `python/slappyengine/tests/`
# subpackage, so we list that explicit path too. Same story for `.pdb`
# debug symbols.
#
# We intentionally KEEP `python/slappyengine/testing/baselines/` — those
# PNG/NPY files are runtime data for the public `slappyengine.testing`
# golden-master API. Downstream test suites (Ochema Circuit, Bullet
# Strata) call `assert_scene_matches(...)` and need the committed
# baselines on disk; without them every first run silently bootstraps a
# new baseline and asserts nothing.
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pdb",
    "**/tests",
    "**/examples",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    # Inner test subpackages — explicit paths because `**/tests` alone
    # didn't catch them through maturin's globbing.
    "python/slappyengine/tests",
    "python/slappyengine/tests/**",
    # Repo-root artefacts that should never ship.
    "_audit_snapshots",
    "_audit_snapshots/**",
    "benchmarks",
    "benchmarks/**",
    "docs",
    "docs/**",
    # Tests / examples now live under SlapPyEngineTests/ and
    # SlapPyEngineExamples/ at the repo root (2026-06-02 restructure).
    "SlapPyEngineTests",
    "SlapPyEngineTests/**",
    "SlapPyEngineExamples",
    "SlapPyEngineExamples/**",
    "scripts",
    "scripts/**",
    "tools",
    "tools/**",
    "target",
    "target/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["SlapPyEngineTests/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
