[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pharos-engine"
version = "0.3.0b1"
description = "2D pixel-art game engine with optional 3D layers, Rust backends, and wgpu rendering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["game-engine", "pixel-art", "2d", "3d", "wgpu", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "wgpu>=0.18",
    "numpy>=1.24",
    "Pillow>=10.0",
    "glfw>=2.5",
    "pyyaml>=6.0",
    "lz4>=4.0",
]

[project.scripts]
pharos = "pharos_engine.cli:main"

[project.urls]
Homepage = "https://github.com/andrewkwatts-maker/SlapPyEngine"
Repository = "https://github.com/andrewkwatts-maker/SlapPyEngine"
Issues = "https://github.com/andrewkwatts-maker/SlapPyEngine/issues"

[project.optional-dependencies]
# Notebook / diary editor UI stack — DearPyGui-based panels + gizmos,
# pywebview-based project-manager splash, arithma expression editor.
editor = ["dearpygui>=1.11", "pywebview>=4.0", "arithma>=2.0.2"]
# 3D asset import — glTF 2.0 + Wavefront OBJ + STL/PLY (trimesh) +
# HDR/EXR/DDS textures (imageio). Pillow is already a core dep and
# covers PNG/JPEG/WebP/TGA out of the box.
#
# HH3 recommendation (docs/nova3d_gap_audit_2026_07_05.md §6, §8):
# ship all mesh + optional texture backends behind a single ``assets``
# extra to keep the base wheel small (< 800 KiB core; +~30 MB with
# assets). Users doing pure 2D pixel-art work never need these.
assets = [
    "pygltflib>=1.16",
    "trimesh>=4.0",
    "imageio>=2.34",
    "Pillow>=10.0",
]
# Runtime game HUD — immediate-mode UI backed by imgui[glfw]. Kept
# separate from ``editor`` because a shipped game must not depend on
# DearPyGui (~15 MB), and imgui integrates directly with the wgpu +
# glfw event loop the game already runs.
hud = ["imgui[glfw]>=2.0"]
# Video recording + import. ``av`` is the historical backend (PyAV,
# libav bindings); opencv-python and imageio-ffmpeg are lighter
# alternatives for capture-only / ffmpeg-CLI-only workflows. All three
# are optional — the video subpackage soft-imports whichever it finds.
video = [
    "av>=12.0",
    "opencv-python>=4.9",
    "imageio-ffmpeg>=0.4",
]
# Audio backends. sounddevice + soundfile is the primary path
# (already used by audio.py); pyaudio is provided as a fallback for
# platforms where PortAudio via sounddevice fails to bind.
audio = [
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "pyaudio>=0.2",
]
# Development-time tooling: pytest + async plugin + filesystem watcher
# for hot reload, plus maturin for building the Rust ``_core`` wheel
# from a checkout.
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "watchdog>=3.0",
    "maturin>=1.5",
]
# AI-assisted authoring. httpx is used by the built-in Ollama client
# for local LLM inference; torch + transformers gate the (heavy)
# hugging-face model paths. These are opt-in because torch alone is
# ~800 MB and would blow up the ``all`` meta-extra.
ai = [
    "httpx>=0.27",
    "torch>=2.0",
    "transformers>=4.30",
]
# Symbolic + numeric formula evaluation surface for `pharos_engine.math`.
# When this extra is installed `Formula` / `evaluate` / `compile_formula`
# route through arithma's Rust-backed `Expression`. Without it the math
# subpackage still imports — it falls back to a locked-down Python eval
# sandbox (stdlib ``math`` only) for formula evaluation.
math = ["arithma>=2.0.2"]
# Multiplayer / peer-to-peer networking. kademlia = DHT peer
# discovery, aioice = WebRTC ICE, zeroconf = LAN discovery,
# websockets = signalling / lobby transport.
network = [
    "kademlia>=2.2.2",
    "aioice>=0.9.0",
    "zeroconf>=0.131",
    "websockets>=12.0",
]
# 3D mesh + PBR rendering support.
# wgpu is already a core dependency, so no additional Python packages are needed.
# The _core Rust crate's "3d" feature flag is activated at build time:
#   maturin build --features 3d
# Install with: pip install pharos-engine[3d]
3d = []
# Meta-extra: pull in every optional runtime dep except the (~800 MB)
# ``ai`` bundle. This is the "install everything I might reasonably
# want" bucket; the heavy torch + transformers path stays opt-in.
all = ["pharos-engine[editor,assets,hud,math,video,audio,network]"]

[tool.maturin]
python-source = "python"
module-name = "pharos_engine._core"
features = ["pyo3/extension-module"]
# Non-Python package data that must ship inside the wheel. Maturin auto-
# includes ``*.py`` files under ``python-source`` but skips other file
# types unless they are named here. The baked diary themes are
# copied on first launch by ``pharos_engine.ui.theme.user_themes``.
include = [
    "python/pharos_engine/ui/theme/themes/_baked/*.theme.yaml",
    "python/pharos_engine/prefabs/baked/*.prefab.yaml",
    "python/pharos_engine/prefabs/baked/previews/*.png",
    "python/pharos_engine/post_process/baked_chains/*.chain.yaml",
    "python/pharos_engine/ui/hotkeys/baked/*.yaml",
    "python/pharos_engine/ui/editor/baked_layouts/*.layout.yaml",
    "python/pharos_engine/ui/plugin_samples/**/*.py",
    "python/pharos_engine/ui/plugin_samples/**/*.yaml",
]
# Strip debug symbols from the compiled _core extension to shrink wheel size.
# Combined with [profile.release] strip = true in Cargo.toml, this drops the
# wheel by ~30-50% on platforms where Cargo's strip doesn't fully apply.
strip = true
# Exclude development artifacts from the wheel.
#
# Wheel-size audit 2026-06-02: maturin's `exclude` accepts glob patterns
# relative to the project root. `**/tests` matches top-level `tests/` but
# does not consistently match the inner `python/pharos_engine/tests/`
# subpackage, so we list that explicit path too. Same story for `.pdb`
# debug symbols.
#
# We intentionally KEEP `python/pharos_engine/testing/baselines/` — those
# PNG/NPY files are runtime data for the public `pharos_engine.testing`
# golden-master API. Downstream test suites (Ochema Circuit, Bullet
# Strata) call `assert_scene_matches(...)` and need the committed
# baselines on disk; without them every first run silently bootstraps a
# new baseline and asserts nothing.
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pdb",
    "**/tests",
    "**/examples",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    # Inner test subpackages — explicit paths because `**/tests` alone
    # didn't catch them through maturin's globbing.
    "python/pharos_engine/tests",
    "python/pharos_engine/tests/**",
    # Repo-root artefacts that should never ship.
    "_audit_snapshots",
    "_audit_snapshots/**",
    "benchmarks",
    "benchmarks/**",
    "docs",
    "docs/**",
    # Tests / examples now live under SlapPyEngineTests/ and
    # SlapPyEngineExamples/ at the repo root (2026-06-02 restructure).
    "SlapPyEngineTests",
    "SlapPyEngineTests/**",
    "SlapPyEngineExamples",
    "SlapPyEngineExamples/**",
    "scripts",
    "scripts/**",
    "tools",
    "tools/**",
    "target",
    "target/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["SlapPyEngineTests/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
