[package]
name = "pharos_bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pharos headless: standalone Rust+Vulkan runtime, no Python required."

[[bin]]
name = "pharos-headless"
path = "src/main.rs"

[dependencies]
# Sprint 4 wires this to pharos_core + pharos_render.
