[package]
name = "pharos_bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pharos headless: standalone Rust+wgpu runtime, no Python required."

[[bin]]
name = "pharos-headless"
path = "src/main.rs"

[dependencies]
pharos_render = { path = "../pharos_render" }
pharos_core = { path = "../pharos_core" }
serde.workspace = true
serde_yaml.workspace = true
image.workspace = true
glam.workspace = true
