[package]
name = "pharos_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pharos engine core: physics, fluid, softbody, geometry kernels. Hosts #[pyfunction]/#[pyclass] types re-exported through pharos_py."

[lib]
name = "pharos_core"
crate-type = ["rlib"]

[dependencies]
pyo3.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bytemuck.workspace = true
rand.workspace = true
half.workspace = true
lz4.workspace = true
wide.workspace = true

[features]
default = []
3d = []
gi = ["3d"]
ibl = ["3d"]
