[package]
name = "pharos_py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 bindings for PharosEngine: thin cdylib re-exporting pharos_core kernels + hosting pyo3-heavy helpers."

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
lz4.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bytemuck.workspace = true
rand.workspace = true
half.workspace = true

# Kernel crate: hosts physics/fluid/softbody/geometry #[pyfunction]s
# and #[pyclass]es. pharos_py re-registers them under the _core module
# via each kernel's `pub fn register(m)` entry point.
pharos_core = { path = "../pharos_core" }

[features]
default = ["3d"]
3d = ["pharos_core/3d"]
gi = ["3d", "pharos_core/gi"]
ibl = ["3d", "pharos_core/ibl"]
