[package]
name = "pharos_render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pharos render backend: wgpu + Vulkan, VCR pipeline, CSM, skinning, scene walker."

[lib]
name = "pharos_render"
crate-type = ["rlib"]

[dependencies]
bytemuck.workspace = true
half.workspace = true
# Sprint 4 lands the wgpu backend; Sprint 6 the Vulkan/ash path.
# wgpu = { workspace = true }
# ash  = { workspace = true, optional = true }

[features]
default = []
vulkan = []
cpu-fallback = []
